--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <!-- Second page after Thumbs Down is clicked -->
     <div id="second-page" class="page" style="display:none;">
-      <h1>Choose an option:</h1>
+      <h1>What went wrong?:</h1>
       <div class="buttons">
-        <button class="feedback-option">Audio Quality</button>
-        <button class="feedback-option">Video Quality</button>
-        <button class="feedback-option">Usability</button>
-        <button class="feedback-option">Overall Performance</button>
+        <button class="feedback-option">Poor Audio Quality</button>
+        <button class="feedback-option">Poor Video Quality</button>
+        <button class="feedback-option">Poor Usability</button>
+        <button class="feedback-option">Poor Overall Performance</button>
       </div>
     </div>
 
